up: removed mysql related containers on the environment

--- a/.env.example
+++ b/.env.example
@@ -19,15 +19,13 @@ JWT_ACCESS_TOKEN_EXPIRES=3600
 ADMIN_INIT_PASSWORD=CHANGE_THIS
 
 # ===== DATABASE CONFIGURATION =====
-# For Docker deployment
-MYSQL_ROOT_PASSWORD=CHANGE_THIS
+# External Database Connection Details
+# The backend will connect to this host. Ensure it is accessible from the container.
+MYSQL_HOST=your-external-db-host.com
+MYSQL_PORT=3306
 MYSQL_DB=claims
 MYSQL_USER=claims_user
-MYSQL_PASSWORD=CHANGE_THIS
-
-# For local development
-MYSQL_HOST=127.0.0.1
-# MYSQL_HOST=mysql  # Use this for Docker deployment
+MYSQL_PASSWORD=your_secure_password
 
 
 
