fix: env args on dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,14 @@
 # Stage 1: Build
 FROM node:18-alpine AS build
 
+ARG VITE_API_URL
+ARG VITE_ENV
+ARG VITE_ALLOWED_HOSTS
+
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_ENV=$VITE_ENV
+ENV VITE_ALLOWED_HOSTS=$VITE_ALLOWED_HOSTS
+
 WORKDIR /app
 
 # Copy package files
